<resources>
    <string name="app_name">KingOfEstudos</string>
    <string name="shot_views">Shot views</string>
    <string name="hello">Hello</string>
    <string name="search">Search</string>
    <string name="goals">Goals</string>
    <string name="health">Health</string>
    <string name="estudante">Estudante!</string>
    <string name="calend_rio">calendário</string>
    <string name="atividades">atividades</string>
    <string name="king_of_estudos">King of estudos</string>
    <string name="home">Home</string>
    <string name="favorite">favorite</string>
    <string name="account">account</string>
    <string name="settings">settings</string>
    <string name="objetivos">Objetivos</string>
    <string name="calendario">Calendario</string>
    <string name="sa_de">Saúde</string>
    <string name="tarefas">Tarefas</string>
    <string name="cronometro">Cronometro</string>
    <string name="title_activity_objetivos">ObjetivosActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="perfil">Perfil</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="seu_perfil">Seu perfil</string>
</resources>